--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,19 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
 }
+
+.progress-inner {
+	animation-name: animate-bar;
+	animation-timing-function: linear;
+	animation-direction: forwards;
+}
+
+@keyframes animate-bar {
+	from {
+		width: 0;
+	}
+
+	to {
+		width: 100%;
+	}
+}
